[Bug #202] Modify RDF4J driver to remove all property assertions on its update to prevent transaction concurrency issues.
Originally, all property values were selected and then these statements were removed on commit. However, if these changed in the meantime (e.g., when another transaction committed), it lead to stale data being in the repository.